code cleanup pass