@@ -1,4 +1,4 @@
-// 
+//
 // Filename : SuperSubtypeData.java
 //
 // UK Crown Copyright (c) 2005. All Rights Reserved
@@ -68,7 +68,7 @@ public abstract class SuperSubtypeData implements org.xtuml.masl.inspector.proce
             final Node curNode = parent.getChildNodes().item(i);
             if (curNode.getNodeType() == Node.ELEMENT_NODE) {
                 final String objName = curNode.getNodeName();
-                final Integer instanceId = new Integer(curNode.getAttributes().getNamedItem("id").getNodeValue());
+                final Integer instanceId = Integer.valueOf(curNode.getAttributes().getNamedItem("id").getNodeValue());
 
                 if (objName.equals(meta.getSupertype().getName())) {
                     supertypeId = instanceId;
